--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "ci-test": "jest"
   },
   "dependencies": {
     "next": "13.5.2",
