--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lint-staged": "^14.0.1",
     "node-sass": "^9.0.0",
     "prettier": "^3.0.3",
+    "recommended": "link:plugin:import/recommended",
     "stylelint": "^15.10.3",
     "stylelint-config-prettier-scss": "^1.0.0",
     "stylelint-config-property-sort-order-smacss": "^9.1.0",
