--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "ci-test": "jest"
   },
   "dependencies": {
+    "accept-language": "^3.0.18",
     "gsap": "^3.12.2",
-    "msw": "^1.3.1",
     "next": "13.5.2",
-    "next-router-mock": "^0.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.68.0"
@@ -45,13 +44,18 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sonarjs": "^0.21.0",
     "husky": "^8.0.3",
+    "i18next": "^23.5.1",
+    "i18next-resources-to-backend": "^1.1.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^14.0.1",
+    "msw": "^1.3.1",
+    "next-router-mock": "^0.9.9",
     "node-sass": "^9.0.0",
     "prettier": "^3.0.3",
+    "react-i18next": "^13.2.2",
     "recommended": "link:plugin:import/recommended",
     "stylelint": "^15.10.3",
     "stylelint-config-prettier-scss": "^1.0.0",
