--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-sonarjs": "^0.21.0",
     "husky": "^8.0.3",
     "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
@@ -55,6 +56,7 @@
     "next-router-mock": "^0.9.9",
     "node-sass": "^9.0.0",
     "prettier": "^3.0.3",
+    "react-cookie": "^6.1.1",
     "react-i18next": "^13.2.2",
     "recommended": "link:plugin:import/recommended",
     "stylelint": "^15.10.3",
