--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "accept-language": "^3.0.18",
+    "axios": "^1.5.0",
     "gsap": "^3.12.2",
     "next": "13.5.2",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.3",
