--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie-player": "^1.5.5",
+    "react-typist": "^2.0.5",
     "sass": "^1.68.0"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/react-typist": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "babel-jest": "^29.7.0",
