--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-lottie-player": "^1.5.5",
-    "react-typist": "^2.0.5",
+    "react-simple-typewriter": "^5.0.1",
     "sass": "^1.68.0"
   },
   "devDependencies": {
