--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "13.5.2",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
+    "notion-utils": "^6.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
