--- a/packages/notion/.eslintrc.json
+++ b/packages/notion/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "root": true,
+  "parserOptions": {
+    "ecmaVersion": 2020
+  },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "react", "react-hooks"],
   "extends": [
@@ -16,7 +19,8 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "rules": {
     "@typescript-eslint/no-explicit-any": 0,
