--- a/packages/notion/package.json
+++ b/packages/notion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-notion-starter-kit",
+  "name": "@mono-repo/notion",
   "version": "2.0.0",
   "private": true,
   "description": "The perfect starter kit for building beautiful websites with Next.js and Notion.",
@@ -37,6 +37,7 @@
     "got": "^12.0.3",
     "isomorphic-unfetch": "^3.1.0",
     "lqip-modern": "^1.2.0",
+    "mono-repo": "link:../../mono-repo",
     "next": "^12.3.1",
     "notion-client": "^6.15.6",
     "notion-types": "^6.15.6",
