--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,27 +12,17 @@
     "ci-test": "jest"
   },
   "dependencies": {
-    "@notion-render/bookmark-plugin": "^0.0.2",
-    "@notion-render/client": "^0.0.2",
-    "@notion-render/hljs-plugin": "^0.0.2",
-    "@notionhq/client": "^2.2.13",
     "accept-language": "^3.0.18",
     "axios": "^1.5.0",
     "gsap": "^3.12.2",
     "next": "13.5.2",
-    "notion-client": "^6.16.0",
-    "notion-types": "^6.16.0",
-    "notion-utils": "^6.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-lottie-player": "^1.5.5",
     "react-notion-x": "^6.16.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-slick": "^0.29.0",
-    "sass": "^1.68.0",
-    "slick-carousel": "^1.8.1",
-    "smooth-scrollbar": "^8.8.4"
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -45,11 +35,10 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@types/react-slick": "^0.23.10",
-    "@types/react-typist": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "babel-jest": "^29.7.0",
+    "compression-webpack-plugin": "^10.0.0",
     "eslint": "8.49.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.5.2",
